Refactor to fix bug